--- a/templates/logged_in.html
+++ b/templates/logged_in.html
@@ -4,10 +4,10 @@
 <head>
   <title>T_Crew Sign-Ups</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link type="text/css" rel="stylesheet" href="/stylesheets/yeti.css" media="screen">
   <link type="text/css" rel="stylesheet" href="/stylesheets/timeline.css">
   <link type="text/css" rel="stylesheet" href="/stylesheets/sticky-footer.css">
-  <link type="text/css" rel="stylesheet" href="/bootplus/css/bootplus.min.css" media="screen">
-  <script src = "/bootplus/js/bootstrap.min.js"></script>
+  <!--<script src = "/bootplus/js/bootstrap.min.js"></script>-->
 </head>
 <body>
   <div id="wrap">
